# restic-docker-swarm

./: .gitignore  LICENSE.md  Makefile  README.md  build.sh  docker-compose.yml  pylintrc
.github/workflows/: deploy-release.yml  publish-stable-release.yml  test-commit.yml
agent/: Dockerfile  build.sh  docker-entrypoint.sh  docker-healthcheck.py  setup.py  tox.ini
agent/restic_docker_swarm_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  (+1 more)
docker-auto-backup/: Dockerfile  docker-backup.sh  docker-config.sh  docker-entrypoint.sh  docker-healthcheck.sh  docker-rotate-backups.sh  docker-rotate-local.sh  docker-rotate-remote.sh
manager/: gulpfile.js  package-lock.json  package.json  pyproject.toml
manager/src/: .env  manage.py
manager/src/cluster/: forms.py  models.py  urls.py  views.py
manager/src/cluster/management/commands/: fetch_cluster_info.py
manager/src/cluster/migrations/: 0001_initial.py
manager/src/cluster/templates/: cluster.html  service.html
manager/src/common/static/css/: bundle.scss
manager/src/common/static/css/partials/: _button.scss  _fonts.scss  _form.scss
manager/src/common/templates/: base.html
manager/src/common/templates/partials/: form_control.html  form_save.html
manager/src/rds_manager/: asgi.py  settings.py  urls.py  wsgi.py
manager/src/restic/: apps.py  forms.py  models.py  urls.py  views.py
manager/src/restic/migrations/: 0001_initial.py
manager/src/restic/templates/: restic.html
server/: Dockerfile  build.sh  docker-entrypoint.sh
test/: docker-compose.yml  postgres-init.sh  setup.sh  stack.yml
(+28 files in other folders)
