[tool.poetry]
name = "rds-manager"
version = "0.1.0"
description = ""
authors = ["Eero Talus <eero.talus@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
django-environ = "^0.9.0"
docker = "^6.0.0"
django-widget-tweaks = "^1.4.12"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
